--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "gostack-gobarber-backend",
   "version": "1.0.0",
-  "description": "",
+  "description": "Backend for Rocketseat's GoStack Bootcamp 10 GoBarber App",
+  "repository": {
+    "url": "https://github.com/gpmarchi/gostack-gobarber-backend"
+  },
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -15,6 +18,7 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^7.18.0",
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.21.3"
